--- a/MainApp/MainApp.csproj
+++ b/MainApp/MainApp.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
+      <PackageReference Include="Moq" Version="4.20.72" />
     </ItemGroup>
 
 </Project>
