Integrate console app into avalonia, develop functionalitieas, user can add and update the contact list. developing also message box and validation

--- a/MainApp_Avalonia/MainApp_Avalonia.csproj
+++ b/MainApp_Avalonia/MainApp_Avalonia.csproj
@@ -19,6 +19,9 @@
             <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
         </PackageReference>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+        <PackageReference Include="MessageBox.Avalonia" Version="3.2.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
         <!-- Add Business project as a reference -->
         <ProjectReference Include="..\Business\Business.csproj" />
     </ItemGroup>
