Develop validation for contact form and a message modal to show up while there is an exception

--- a/MainApp_Avalonia/MainApp_Avalonia.csproj
+++ b/MainApp_Avalonia/MainApp_Avalonia.csproj
@@ -25,4 +25,8 @@
         <!-- Add Business project as a reference -->
         <ProjectReference Include="..\Business\Business.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Views\" />
+    </ItemGroup>
 </Project>
